Mon Aug 16 23:16:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* NEWS: updated.  a patch from Kazuhiro NISHIYAMA in [ruby-dev:42001].

Sun Aug 15 19:59:58 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/webrick/httpresponse.rb (WEBrick::HTTPResponse#set_error):
	  Fix for possible cross-site scripting (CVE-2010-0541). 
	  Found by Apple, reported by Hideki Yamane.
	  Patch by Hirokazu Nishio <nishio.hirokazu AT gmail.com>.

Fri Jul 30 08:51:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): home directory must be absolute.
	  [ruby-core:31537]

Fri Jul 30 08:33:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should check if could find user.
	  [ruby-core:31538]

Sat Aug  7 13:33:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0): fix for VM_METHOD_TYPE_NOTIMPLEMENTED.
	  [ruby-dev:41953]

Fri Aug  6 18:59:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (realpath_rec): rb_str_modify depends on the length, so
	  resize instead.

Thu Aug  5 21:20:31 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_ARGSCAT, NODE_ARGSPUSH): drop unused ARGSCAT
	  results when poped is true.  [ruby-dev:41933], [Bug #3658]
	  This is retry of r28870 and r28873 which were reverted.

Thu Aug  5 16:57:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_make_pattern): fold continuous PLAINs to get rid of
	  snail at too deep path.  [ruby-dev:41871]

Sat Aug  7 09:47:06 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: fix checking version of GCC.

Mon Aug  2 21:51:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): rb_str_set_len modifies ptr
	  since r26303.

Mon Aug  2 21:16:03 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: NONAMELESSUNION defined only if gcc
	  version is older than 3.4.4. [ruby-core:31567] [Bug #3637]
	* ext/win32ole/extconf.rb: ditto.
